--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <a class="button button-default" href="mailto:22media@proton.me" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email</a>
               <h2 id="t89">tunderwood89</h2>
               <a class="button button-yt-alt" href="https://youtube.com/@tunderwood89" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube-alt.svg" alt="YouTube Logo">YouTube</a>
+              <a class="button button-tiktok" href="https://tiktok.com/@t89yt" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
               <a class="button button-bluesky" href="https://bsky.app/profile/t89.uk" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
               <a class="button button-github" href="https://github.com/tunderwood89" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
               <a class="button button-modrinth" href="https://modrinth.com/user/tunderwood89" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/modrinth.svg" alt="Modrinth icon">Modrinth</a>
@@ -38,7 +39,6 @@
               <a class="button button-discord" href="https://discord.gg/4xUqw6T8su" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
               <h2 id="tomslop">tomslop</h2>
               <a class="button button-yt-alt" href="https://www.youtube.com/@tomslop" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube-alt.svg" alt="YouTube Logo">YouTube</a>
-              <a class="button button-tiktok" href="https://tiktok.com/@tomsl0p" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
               <a class="button button-discord" href="https://discord.gg/wEK9UkWaRT" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
             </div>
       <footer>
