--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
               <a class="button button-discord" href="https://discord.gg/wEK9UkWaRT" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
             </div>
       <footer>
-        nothing's ever perfect <a href="https://www.youtube.com/watch?v=oi3QmAmrG6M" style="text-decoration: none;">✌️</a>
+        nothing's ever perfect <a href="https://www.youtube.com/watch?v=oi3QmAmrG6M" style="text-decoration: none;">✌️</a><br>
+        this site uses <a href="https://withcabin.com/privacy/22media.top">cabin analytics</a>.
       </footer>
     </div>
   </div>
 <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="22media" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+<script async src="https://scripts.withcabin.com/hello.js"></script>
+</body>
 </html>
