--- a/index.html
+++ b/index.html
@@ -24,25 +24,12 @@
               <a class="button button-bluesky" href="https://bsky.app/profile/22media.top" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
               <a class="button button-discord" href="https://discord.gg/srC7Fs659R" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
               <a class="button button-default" href="mailto:22media@proton.me" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email</a>
-              <h2 id="t89">tunderwood89</h2>
-              <a class="button button-yt-alt" href="https://youtube.com/@tunderwood89" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube-alt.svg" alt="YouTube Logo">YouTube</a>
-              <a class="button button-tiktok" href="https://tiktok.com/@t89yt" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
-              <a class="button button-bluesky" href="https://bsky.app/profile/t89.uk" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
-              <a class="button button-github" href="https://github.com/tunderwood89" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
-              <a class="button button-modrinth" href="https://modrinth.com/user/tunderwood89" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/modrinth.svg" alt="Modrinth icon">Modrinth</a>
-              <a class="button button-google-black" href="https://drive.google.com/drive/folders/1Pef7SBU5ZXCgxI2mLbEaQVbyGn1ndpX3?usp=sharing" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/google-drive.svg" alt="Google Drive Logo">Hammer Maps</a>
-              <a class="button button-discord" href="https://discord.gg/ePZ3Gexn4x" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
-              <a class="button button-default" href="https://t89.uk" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-code.svg" alt="Cloud Icon">Website (t89.uk)</a>
-              <h2 id="gman">The G-Man</h2>
-              <a class="button button-yt-alt" href="https://youtube.com/@thegmanclips" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube-alt.svg" alt="YouTube Logo">YouTube</a>
-              <a class="button button-tiktok" href="https://tiktok.com/@thegmanclips" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
-              <a class="button button-discord" href="https://discord.gg/4xUqw6T8su" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
-              <h2 id="tomslop">tomslop</h2>
-              <a class="button button-yt-alt" href="https://www.youtube.com/@tomslop" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube-alt.svg" alt="YouTube Logo">YouTube</a>
-              <a class="button button-discord" href="https://discord.gg/wEK9UkWaRT" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
+              <h2>Profiles</h2>
+              <a class="button button-default" href="/tunderwood89.html" role="button"><img class="icon" aria-hidden="true" src="images/icons/tunderwood89.svg" alt="Email Icon">tunderwood89</a>
+              <a class="button button-default" href="/arcbase.html" role="button"><img class="icon" aria-hidden="true" src="images/icons/arcbase.svg" alt="Email Icon">arcbase</a>
+              <a class="button button-default" href="/tomslop.html" role="button"><img class="icon" aria-hidden="true" src="images/icons/tomslop.svg" alt="Email Icon">tomslop</a>
             </div>
       <footer>
-        nothing's ever perfect <a href="https://www.youtube.com/watch?v=oi3QmAmrG6M" style="text-decoration: none;">✌️</a><br>
         this site uses <a href="https://withcabin.com/privacy/22media.top">cabin analytics</a>.
       </footer>
     </div>
