--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <div class="button-stack" role="navigation">
               <a class="button button-coffee" href="https://buymeacoffee.com/22media" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Milkshake</a>
               <a class="button button-patreon" href="https://patreon.com/22Media" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/patreon.svg" alt="Patreon Logo">Patreon</a>
+              <div style="margin-bottom: 25px;"></div>
+              <a class="button button-default" href="https://slashpage.com/22media" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-blog.svg" alt="Blog Icon">22Blog</a>
               <a class="button button-bluesky" href="https://bsky.app/profile/22media.top" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
               <a class="button button-discord" href="https://discord.gg/srC7Fs659R" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
               <a class="button button-default" href="mailto:22media@proton.me" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email</a>
@@ -30,7 +32,7 @@
               <a class="button button-default" href="/tomslop.html" role="button"><img class="icon" aria-hidden="true" src="images/icons/tomslop.svg" alt="Email Icon">tomslop</a>
             </div>
       <footer>
-        this site uses <a href="https://withcabin.com/privacy/22media.top">cabin analytics</a>.
+        This site uses <a href="https://withcabin.com/privacy/22media.top">Cabin</a>.
       </footer>
     </div>
   </div>
