--- a/index.html
+++ b/index.html
@@ -17,26 +17,13 @@
     <div class="container">
         <div class="column">
             <img class="avatar avatar--soft" src="images/logo.svg" alt="22Media" style="max-width: 100%; height: auto;">
-            <p>The person behind your faves.</p>
+            <p>The 22Media brand has been retired.</p>
             <div class="button-stack" role="navigation">
-              <a class="button button-coffee" href="https://buymeacoffee.com/22media" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Milkshake</a>
-              <a class="button button-patreon" href="https://patreon.com/22Media" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/patreon.svg" alt="Patreon Logo">Patreon</a>
-              <div style="margin-bottom: 25px;"></div>
-              <a class="button button-default" href="https://slashpage.com/22media" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-blog.svg" alt="Blog Icon">22Blog</a>
-              <a class="button button-bluesky" href="https://bsky.app/profile/22media.top" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
-              <a class="button button-discord" href="https://discord.gg/srC7Fs659R" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
-              <a class="button button-default" href="mailto:22media@proton.me" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email</a>
-              <h2>Profiles</h2>
-              <a class="button button-default" href="/tunderwood89.html" role="button"><img class="icon" aria-hidden="true" src="images/icons/tunderwood89.svg" alt="Email Icon">tunderwood89</a>
-              <a class="button button-default" href="/arcbase.html" role="button"><img class="icon" aria-hidden="true" src="images/icons/arcbase.svg" alt="Email Icon">arcbase</a>
-              <a class="button button-default" href="/tomslop.html" role="button"><img class="icon" aria-hidden="true" src="images/icons/tomslop.svg" alt="Email Icon">tomslop</a>
+              <a class="button button-default" href="https://youtube.com/@tunderwood89" role="button"><img class="icon" aria-hidden="true" src="images/icons/tunderwood89.svg" alt="Email Icon">tunderwood89</a>
+              <a class="button button-default" href="https://www.youtube.com/@thearcbase" role="button"><img class="icon" aria-hidden="true" src="images/icons/arcbase.svg" alt="Email Icon">arcbase</a>
+              <a class="button button-default" href="https://www.youtube.com/@tomslop" role="button"><img class="icon" aria-hidden="true" src="images/icons/tomslop.svg" alt="Email Icon">tomslop</a>
             </div>
-      <footer>
-        This site uses <a href="https://withcabin.com/privacy/22media.top">Cabin</a>.
-      </footer>
     </div>
   </div>
-<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="22media" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
-<script async src="https://scripts.withcabin.com/hello.js"></script>
 </body>
 </html>
